# appimage-builder

./: pyproject.toml  requirements.txt
.github/workflows/: build-test.yml  continuous-builds.yml  stable-releases.yml
appimagebuilder/: __main__.py  orchestrator.py
appimagebuilder/commands/: setup_runtime.py
appimagebuilder/modules/deploy/apt/: venv.py
appimagebuilder/modules/generate/: recipe_generator.py
appimagebuilder/modules/prime/: appimage_primer.py
appimagebuilder/modules/setup/: apprun_binaries_resolver.py
appimagebuilder/modules/test/: execution_test.py
appimagebuilder/recipe/: loader.py
recipes/appimage-builder/: AppImageBuilder.yml
recipes/bash/: AppImageBuilder.yml  bash-apprun-v3.yml
recipes/bash-files/: AppImageBuilder.yml
recipes/bash-pacman/: AppImageBuilder.yml
recipes/bash/tests/: exec_script_with_external_shell.sh
recipes/gimp/: AppImageBuilder.yml
recipes/gnome-calculator/: AppImageBuilder.yml
recipes/hello-world-gtk/: AppImageBuilder.yml
recipes/hello-world-qt5/: AppImageBuilder.yml  recipe-with-apprun-v3.yml
recipes/hello-world-qt6/: AppImageBuilder.yml
recipes/kcalc/: AppImageBuilder.yml
recipes/kcalc-files/: AppImageBuilder.yml
recipes/kcalc-nbc/: AppImageBuilder.yml
recipes/parole/: AppImageBuilder.yml
recipes/pyqt5/: AppImageBuilder.yml
recipes/python/: AppImageBuilder.yml
recipes/qmlscene/: AppImageBuilder.yml
recipes/tkinter/: AppImageBuilder.yml
recipes/vlc/: AppImageBuilder.yml
recipes/wget/: AppImageBuilder.yml
recipes/wine/: AppImageBuilder.yml
tests/recipe/: test_validator.py
(+8 files in other folders)
